force-app/main/default/objects/Corporate_Affiliation__c/Corporate_Affiliation__c.object-meta.xml
<CustomObject>
    <label>Corporate Affiliation</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Affiliations Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Corporate Affiliations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>