force-app/main/default/objects/Corporate_Affiliation__c/fields/Special_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Special_Conditions__c</fullName>
    <label>Special Conditions</label>
    <type>TextArea</type>
</CustomField>