force-app/main/default/objects/Corporate_Affiliation__c/fields/Sponsorship_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Amount__c</fullName>
    <label>Sponsorship Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>