force-app/main/default/objects/Corporate_Affiliation__c/fields/Volunteer_Group__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Group__c</fullName>
    <label>Volunteer Group</label>
    <referenceTo>Volunteer_Group__c</referenceTo>
    <relationshipName>Affiliations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>