force-app/main/default/objects/Corporate_Affiliation__c/recordTypes/Corporation.recordType-meta.xml
<RecordType>
    <fullName>Corporation</fullName>
    <active>true</active>
    <label>Corporation</label>
</RecordType>